--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
     "name": "dabro-app",
     "version": "0.1.0",
     "private": true,
-    "dependencies": {
+    "peerDependencies": {
+        "react": "^17.0.2",
+        "styled-components": "^5.3.3"
+    },
+    "devDependencies": {
         "@testing-library/jest-dom": "^5.15.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
@@ -20,6 +24,8 @@
         "redux-devtools-extension": "^2.13.9",
         "redux-saga": "^1.1.3",
         "redux-thunk": "^2.4.1",
+        "rxfire": "^6.0.3",
+        "rxjs": "^7.4.0",
         "web-vitals": "^1.1.2"
     },
     "scripts": {
