--- a/package.json
+++ b/package.json
@@ -2,19 +2,12 @@
     "name": "dabro-app",
     "version": "0.1.0",
     "private": true,
-    "peerDependencies": {
-        "react": "^17.0.2",
-        "styled-components": "^5.3.3"
-    },
     "devDependencies": {
         "@testing-library/jest-dom": "^5.15.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
-        "bootstrap": "^5.1.3",
         "firebase": "^9.5.0",
-        "firebase-firestore-lite": "^1.0.3",
         "react": "^17.0.2",
-        "react-bootstrap": "^2.0.2",
         "react-dom": "^17.0.2",
         "react-firebase-hooks": "^4.0.1",
         "react-redux": "^7.2.6",
@@ -22,10 +15,7 @@
         "react-scripts": "4.0.3",
         "redux": "^4.1.2",
         "redux-devtools-extension": "^2.13.9",
-        "redux-saga": "^1.1.3",
         "redux-thunk": "^2.4.1",
-        "rxfire": "^6.0.3",
-        "rxjs": "^7.4.0",
         "web-vitals": "^1.1.2"
     },
     "scripts": {
@@ -51,5 +41,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "dependencies": {
+        "react-bootstrap": "^2.0.3"
     }
 }
