--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "dabro-app",
+    "name": "obukhiv-post",
     "version": "0.1.0",
     "private": true,
     "devDependencies": {
@@ -44,6 +44,6 @@
         ]
     },
     "dependencies": {
-        "react-bootstrap": "^2.0.3"
+        "use-google-sheets": "^1.3.0"
     }
 }
